--- a/MagicVilla/appsettings.json
+++ b/MagicVilla/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "defaultSQLConnection": "Server=KOKILAPC;Database=Villas_API;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  }
 }
