--- a/MagicVilla/appsettings.json
+++ b/MagicVilla/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "defaultSQLConnection": "Server=KOKILAPC;Database=Villas_API;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "defaultSQLConnection": "Server=192.168.1.19;Database=Dev_Zephyr8;User Id=medicaresqluser;Password=kantime_123;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
